--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fontsource-variable/raleway": "^5.2.8",
     "@tailwindcss/vite": "^4.1.13",
-    "astro": "^5.14.1"
+    "astro": "^5.14.1",
+    "glightbox": "^3.3.1",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
